# pyspark_schema_evaluation

./: MANIFEST.in  README.md  pyproject.toml  requirements.txt
pyspark_schema_evaluation/: __init__.py  i_schema_evolution.py  py.typed  schema_evolution.py
pyspark_schema_evaluation/core/: _enums.py  _logging.py  exceptions.py
pyspark_schema_evaluation/decorators/: _utils.py  schema_decorators.py
pyspark_schema_evaluation/models/: models.py
pyspark_schema_evaluation/registry/: i_schema_registry.py  policy_registry.py  schema_registry.py
pyspark_schema_evaluation/utils/: _result.py  _utils.py
pyspark_schema_evaluation/utils/_spark/: _safe.py  _schema.py
tests/: __init__.py  conftest.py  test_example.py
